--- a/src/views/studentList.ejs
+++ b/src/views/studentList.ejs
@@ -199,24 +199,17 @@
             </div>
 
             <!-- Pagination -->
-            <div class="px-6 py-4 bg-red-50 border-t border-red-100 flex items-center justify-between">
+            <!-- <div class="px-6 py-4 bg-red-50 border-t border-red-100 flex items-center justify-between">
                 <div class="text-sm text-gray-700">
                     Showing <span class="font-medium">1</span> to <span class="font-medium">10</span> of <span class="font-medium">20</span> results
                 </div>
                     <div class="flex items-center space-x-2">
                         <button class="action-button bg-white text-gray-700 hover:bg-red-50 p-1">Previous</button>
                         <button class="action-button bg-red-600 text-white hover:bg-red-700 p-1">1</button>
-                        <button class="action-button bg-white text-gray-700 hover:bg-red-50 p-1">2</button>
                         <button class="action-button bg-white text-gray-700 hover:bg-red-50 p-1">Next</button>
                     </div>
-            </div>
+            </div> -->
         </div>
     </main>
 </body>
-<!-- <script>
-    function editStudent(stdId){
-        axios.put(`/editStudent/${stdId}`)
-    }
-</script> -->
-<!-- <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> -->
 </html>
